--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "aws-sdk": "^2.1329.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-busboy": "^9.0.0",
+    "express-fileupload": "^1.4.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
